# conservation-enforcer

./: AUDIT_v0.2.0.md  AUDIT_v0.2.2.md  CHANGELOG.md  NEXT_HORIZONS.md  README.md  examples.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GAMMA_ETA_SPEC.md
examples/: demo.py  openai_integration.py
github_bot/: conservation_github_bot.py  conservation_github_bot.py.backup
policies/: budget_decay.flx  information_density.flx  scope_discipline.flx
src/conservation_enforcer/: __init__.py  assembler.py  audit.py  budget.py  cognitive_budget.py  enforcer.py  metrics.py  vm.py
src/conservation_enforcer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/conservation_enforcer/policies/: __init__.py
tests/: test_assembler.py  test_audit.py  test_budget.py  test_cognitive_budget.py  test_enforcer.py  test_enforcer_features.py  test_examples.py  test_metrics.py  test_new_policies.py  test_vm.py
