[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conservation-enforcer"
version = "0.2.1"
description = "FLUX bytecode conservation-law enforcement for LLM outputs"
authors = [{name = "SuperInstance"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
